# HomeConnect

./: .gitignore  CMakeLists.txt  LICENSE  README.md
fansmart/: README.md
fansmart/script/: S99EmbeddedModule
fansmart/source/: CMakeLists.txt  fan_smart.cpp  fan_smart.hpp  main.cpp
homeconnect/: README.md
homeconnect/script/: S99EmbeddedModule
homeconnect/source/: CMakeLists.txt  config_project.cpp  config_project.hpp  home_connect.cpp  home_connect.hpp  home_status.cpp  home_status.hpp  main.cpp
smartrelay/: CMakeLists.txt  README.md
smartrelay/script/: S99EmbeddedModule_Smartrelay
smartrelay/source/: CMakeLists.txt  main.cpp  smart_relay.cpp  smart_relay.hpp
source/: CMakeLists.txt  device.hpp  home_connect.cpp  home_connect.hpp  main.cpp
